# transiri

./: README.md  example.py  pyproject.toml
transiri/: tween.py
